Remove dependency on org.osgi.enterprise from the runtime